# TimeTracker

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  install_protoc.py  readme.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
TimeTrackerBackendDocs/Writerside/plantuml/: TimeFrameReceiverStateMachine.puml
TimeTrackerBackendDocs/Writerside/topics/: TimeFrame-receiver-state-machine.md
proto/: CMakeLists.txt  FrameInfoService.proto
py_proto/: simple_client.py
src/: ActivityMonitor.cpp  ActivityMonitor.h  ActivitySnapshot.cpp  ActivitySnapshot.h  FrameInfoService.cpp  FrameInfoService.h  main.cpp
src/FrameInfoService/: FrameInfoService.cpp  FrameInfoService.h
src/proto/: CMakeLists.txt  FrameInfo.proto
src/protobuf/: CMakeLists.txt
src/utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
