INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/src/*.proto")
message(ProtoFiles)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER FrameInfo.proto FrameInfoService.proto)
ADD_LIBRARY(proto STATIC ${PROTO_HEADER} ${PROTO_SRC})